--- a/p2Backend/src/main/resources/application.properties
+++ b/p2Backend/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=${DB_PASS}
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 
 spring.jpa.show-sql=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
